--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@adobe/aio-sdk": "^3.0.0",
+    "@adobe/aio-lib-core-logging": "^2.0.0",
     "node-fetch": "^2.6.0",
     "cloudevents": "^4.0.2",
     "uuid": "^8.0.0",
