--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
   },
   "devDependencies": {
     "jest": "^27.2.4",
-    "@openwhisk/wskdebug": "^1.3.0"
+    "@openwhisk/wskdebug": "^1.3.0",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0"
   },
   "scripts": {
     "test": "jest --passWithNoTests ./test",
