--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@adobe/aio-sdk": "^3.0.0",
     "@adobe/aio-lib-core-logging": "^2.0.0",
-    "node-fetch": "^2.6.0",
+    "@adobe/aio-sdk": "^3.0.0",
+    "@adobe/exc-app": "^0.2.17",
     "cloudevents": "^4.0.2",
-    "uuid": "^8.0.0",
+    "node-fetch": "^2.6.0",
     "regenerator-runtime": "^0.13.5",
-    "@adobe/exc-app": "^0.2.17"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "jest": "^27.2.4",
     "@openwhisk/wskdebug": "^1.3.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -22,7 +21,8 @@
     "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^27.2.4"
   },
   "scripts": {
     "test": "jest --passWithNoTests ./test",
