--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "uuid": "^8.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/eslint-parser": "^7.21.3",
     "@openwhisk/wskdebug": "^1.3.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.4",
