MWPW-128696 - Github actions for milo-fg AIO app (#3)
* MWPW-128696 - Github actions for milo-fg AIO app
- slightly adjusted OOTB config to use node 14
- removed auth sections, not needed for standalone apps to be deployed
- required github secrets already added to the milofg repository for both stage and prod namespaces

* MWPW-128696 - Github actions for milo-fg AIO app
- add generic FG specific secrets as environment variables to deployment actions
- inject env vars for actions on package level
- upgrade node version to 16

---------

Co-authored-by: Honwai Wong <hwong@adobe.com>

--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        node-version: ['12']
+        node-version: ['16']
         os: [ubuntu-latest]
     steps:
       - name: Checkout
@@ -26,22 +26,10 @@ jobs:
         uses: adobe/aio-cli-setup-action@1.1.0
         with:
           os: ${{ matrix.os }}
-          version: 8.x.x
-      - name: Auth
-        uses: adobe/aio-apps-action@2.0.1
-        with:
-          os: ${{ matrix.os }}
-          command: auth
-          CLIENTID: ${{ secrets.CLIENTID_STAGE }}
-          CLIENTSECRET: ${{ secrets.CLIENTSECRET_STAGE }}
-          TECHNICALACCOUNTID: ${{ secrets.TECHNICALACCID_STAGE }}
-          IMSORGID: ${{ secrets.IMSORGID_STAGE }}
-          SCOPES: ${{ secrets.SCOPES_STAGE }}
-          KEY: ${{ secrets.KEY_STAGE }}
       - name: Build
         env:
           AIO_RUNTIME_NAMESPACE: ${{ secrets.AIO_RUNTIME_NAMESPACE_STAGE }}
-        uses: adobe/aio-apps-action@2.0.1
+        uses: adobe/aio-apps-action@2.0.2
         with:
           os: ${{ matrix.os }}
           command: build
@@ -49,13 +37,11 @@ jobs:
         env:
           AIO_RUNTIME_NAMESPACE: ${{ secrets.AIO_RUNTIME_NAMESPACE_STAGE }}
           AIO_RUNTIME_AUTH: ${{ secrets.AIO_RUNTIME_AUTH_STAGE }}
-          AIO_PROJECT_ID: ${{ secrets.AIO_PROJECT_ID_STAGE }}
-          AIO_PROJECT_NAME: ${{ secrets.AIO_PROJECT_NAME_STAGE }}
-          AIO_PROJECT_ORG_ID: ${{ secrets.AIO_PROJECT_ORG_ID_STAGE }}
-          AIO_PROJECT_WORKSPACE_ID: ${{ secrets.AIO_PROJECT_WORKSPACE_ID_STAGE }}
-          AIO_PROJECT_WORKSPACE_NAME: ${{ secrets.AIO_PROJECT_WORKSPACE_NAME_STAGE }}
-          AIO_PROJECT_WORKSPACE_DETAILS_SERVICES: ${{ secrets.AIO_PROJECT_WORKSPACE_DETAILS_SERVICES_STAGE }}
+          FG_SITE: ${{ secrets.FG_SITE }}
+          FG_CLIENT_ID: ${{ secrets.FG_CLIENT_ID }}
+          FG_AUTHORITY: ${{ secrets.FG_AUTHORITY }}
         uses: adobe/aio-apps-action@2.0.1
         with:
           os: ${{ matrix.os }}
           command: deploy
+          noPublish: true
