MWPW-128687 Update auth handling in Floodgate AdobeIO app (#16)
* MWPW-128687 Update auth handling in Floodgate AdobeIO app

Changes to floodgate for getting auth from adobe io directly instead of browsers.

* Preview fixes

* reverting package-lock for checking

* revert package-json

* updated package-lock

* Cleanup test code

* remove commented code

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>
Co-authored-by: Sunil Kamat <107644736+sukamat@users.noreply.github.com>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -9,6 +9,16 @@ application:
           fgSite: $FG_SITE
           fgClientId: $FG_CLIENT_ID
           fgAuthority: $FG_AUTHORITY
+          shareUrl: $SHARE_URL
+          fgShareUrl: $FG_SHARE_URL
+          rootFolder: $ROOT_FOLDER
+          fgRootFolder: $FG_ROOT_FOLDER
+          skipInProgressCheck: $SKIP_INPROGRESS_CHECK
+          clientId: $CLIENT_ID
+          tenantId: $TENANT_ID
+          certPassword: $CERT_PASSWORD
+          certKey: $CERT_KEY
+          certThumbprint: $CERT_THUMB_PRINT
         actions:
           copy:
             function: actions/copy/copy.js
