--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@adobe/aio-lib-state": "^2.1.2",
     "@adobe/aio-sdk": "^3.0.0",
     "@adobe/exc-app": "^0.2.17",
+    "@azure/msal-node": "^1.17.2",
     "cloudevents": "^4.0.2",
     "node-fetch": "^2.6.0",
     "regenerator-runtime": "^0.13.5",
