MWPW-128689 - Create folders before copy to floodgate (#29)
* MWPW-128689 - Async Flow Change

1. When running large files copy to FG for new folders the copy fails due too folder did not exists. Updated to bulk create folders before copy starts
2. Along with state in progress, activation status is also checked
3. Memory for worker actions updated to 2048 mb

* typo updated

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -34,6 +34,7 @@ application:
               LOG_LEVEL: debug
             limits:
               timeout: 3600000
+              memorySize: 2048
           promote:
             function: actions/promote/promote.js
             web: 'yes'
@@ -48,6 +49,7 @@ application:
               LOG_LEVEL: debug
             limits:
               timeout: 3600000
+              memorySize: 2048
           status:
             function: actions/status/status.js
             web: 'yes'
