MWPW-130222 [Due-diligence + Implementation] AdobeIO limitations and updates (#36)
* MWPW-130222 [Due-diligence + Implementation] AdobeIO limitations and updates

Create batches based on the number of batch files configuration.
Maintain a manifest file for the collection of batches and individual batches
Batch details stored in Files
Track each batch and update state (Tracker Batch)
Start/End time updated

Flow of process

                                     -> BATCH 1   -> WORKER (Promote batch files)
                                     :
                                     :
                                     -> BATCH n   -> WORKER (Promote batch files)
PROMOTE -> PROMOTE BATCH (Get Files) -> TRACKER BATCH (Monitor Batch Activations)

* Cleanup directory and other fix couple activation failure

* response always contains previous batch status. added waits

* Few updates based on tests

* Writing metadata as individual files is taking more time over 20 mins to write 10k files. All files are stored in a single batch metadata file

* Minor cleanup

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>
Co-authored-by: Raghu A <raghu@raghus-mbp.corp.adobe.com>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -19,6 +19,9 @@ application:
           certPassword: $CERT_PASSWORD
           certKey: $CERT_KEY
           certThumbprint: $CERT_THUMB_PRINT
+          batchFilesPath: $BATCH_FILES_PATH
+          numBatchFiles: $NUM_BATCH_FILES
+          numBulkPerBatch: $NUM_BULK_PER_BATCH
         actions:
           copy:
             function: actions/copy/copy.js
@@ -41,6 +44,15 @@ application:
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+          promote-batch:
+            function: actions/promote/promoteBatch.js
+            web: 'no'
+            runtime: nodejs:16
+            inputs:
+              LOG_LEVEL: debug
+            limits:
+              timeout: 1900000
+              memory: 1024
           promote-worker:
             function: actions/promote/worker.js
             web: 'no'
@@ -49,7 +61,16 @@ application:
               LOG_LEVEL: debug
             limits:
               timeout: 3600000
-              memorySize: 2048
+              memorySize: 1024
+              concurrency: 5
+          promote-tracker:
+            function: actions/promote/tracker.js
+            web: 'no'
+            runtime: nodejs:16
+            inputs:
+              LOG_LEVEL: debug
+            limits:
+              timeout: 3600000
           status:
             function: actions/status/status.js
             web: 'yes'
