--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@adobe/aio-lib-core-logging": "^2.0.0",
+    "@adobe/aio-lib-files": "^3.0.1",
     "@adobe/aio-lib-state": "^2.1.2",
     "@adobe/aio-sdk": "^3.0.0",
     "@adobe/exc-app": "^0.2.17",
     "@azure/msal-node": "^1.17.2",
     "cloudevents": "^4.0.2",
     "node-fetch": "^2.6.0",
+    "openwhisk": "^3.21.7",
     "regenerator-runtime": "^0.13.5",
     "uuid": "^8.0.0"
   },
