MWPW-132959 Sequence batches and rate limit batches (#39)
* MWPW-130222 [Due-diligence + Implementation] AdobeIO limitations and updates

Create batches based on the number of batch files configuration.
Maintain a manifest file for the collection of batches and individual batches
Batch details stored in Files
Track each batch and update state (Tracker Batch)
Start/End time updated

Flow of process

                                     -> BATCH 1   -> WORKER (Promote batch files)
                                     :
                                     :
                                     -> BATCH n   -> WORKER (Promote batch files)
PROMOTE -> PROMOTE BATCH (Get Files) -> TRACKER BATCH (Monitor Batch Activations)

* Cleanup directory and other fix couple activation failure

* response always contains previous batch status. added waits

* Few updates based on tests

* Writing metadata as individual files is taking more time over 20 mins to write 10k files. All files are stored in a single batch metadata file

* Minor cleanup

* Batch Experimental

* Sequence changes

* result update

* Comments updated

* Enabling handling ECONNRESET

* disable delete in maint

* commented log messages removed

* Write to instance file if there is a change in state.

* Updating review comments

* package lock updated

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>
Co-authored-by: Raghu A <raghu@raghus-mbp.corp.adobe.com>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -20,8 +20,8 @@ application:
           certKey: $CERT_KEY
           certThumbprint: $CERT_THUMB_PRINT
           batchFilesPath: $BATCH_FILES_PATH
-          numBatchFiles: $NUM_BATCH_FILES
-          numBulkPerBatch: $NUM_BULK_PER_BATCH
+          maxFilesPerBatch: $MAX_FILES_PER_BATCH
+          numBulkReq: $NUM_BULK_REQUEST
         actions:
           copy:
             function: actions/copy/copy.js
@@ -44,15 +44,15 @@ application:
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
-          promote-batch:
-            function: actions/promote/promoteBatch.js
+          promote-create-batch:
+            function: actions/promote/createBatch.js
             web: 'no'
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
             limits:
               timeout: 1900000
-              memory: 1024
+              memory: 1024              
           promote-worker:
             function: actions/promote/worker.js
             web: 'no'
@@ -63,17 +63,32 @@ application:
               timeout: 3600000
               memorySize: 1024
               concurrency: 5
-          promote-tracker:
-            function: actions/promote/tracker.js
+          promote-trigger-n-track:
+            function: actions/promote/triggerNTrack.js
             web: 'no'
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
             limits:
-              timeout: 3600000
+              timeout: 600000
           status:
             function: actions/status/status.js
             web: 'yes'
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+          maint:
+            function: actions/maint/maint.js
+            web: 'yes'
+            runtime: nodejs:16
+            inputs:
+              LOG_LEVEL: debug              
+        triggers:
+          everyMin:
+            feed: /whisk.system/alarms/interval
+            inputs: 
+              minutes: 1
+        rules:
+          everyMinRule:
+            trigger: everyMin
+            action: promote-trigger-n-track
