MWPW-132959 Sequence batches and rate limit batching (#40)
Fix for below
shareUrl, fgShareUrl, rootFolder, fgRootFolder
Storinig the payload in appConfig and using those.
Step message var name changed in promote
tempAdminKey for temp to store validate admin key for maint.
tracker.json read errors when file does no exists is logged as debug. This is mostly during initial setup.

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -9,10 +9,6 @@ application:
           fgSite: $FG_SITE
           fgClientId: $FG_CLIENT_ID
           fgAuthority: $FG_AUTHORITY
-          shareUrl: $SHARE_URL
-          fgShareUrl: $FG_SHARE_URL
-          rootFolder: $ROOT_FOLDER
-          fgRootFolder: $FG_ROOT_FOLDER
           skipInProgressCheck: $SKIP_INPROGRESS_CHECK
           clientId: $CLIENT_ID
           tenantId: $TENANT_ID
@@ -22,6 +18,7 @@ application:
           batchFilesPath: $BATCH_FILES_PATH
           maxFilesPerBatch: $MAX_FILES_PER_BATCH
           numBulkReq: $NUM_BULK_REQUEST
+          tempAdminKey: $TEMP_ADMIN_KEY
         actions:
           copy:
             function: actions/copy/copy.js
