MWPW-131427 User group based authorization (#41)
* MWPW-132959 Sequence batches and rate limit batching

Fix for below
shareUrl, fgShareUrl, rootFolder, fgRootFolder
Storinig the payload in appConfig and using those.
Step message var name changed in promote
tempAdminKey for temp to store validate admin key for maint.
tracker.json read errors when file does no exists is logged as debug. This is mostly during initial setup.

* MWPW-131427 User group based authorization

Added configs for specifying FG User and Admin groups.
Maint action updaed to respond wiht user group and admin check with group.
Maint includes enable or disable, every minute trigger rule. As per suggestions received.

* MWPW-131427 User group based authorization
Added configs for specifying FG User and Admin groups.
Maint action updated to respond with user group and admin check with group.
Maint action includes enable or disable, every minute trigger rule. As per suggestions received.

* tempAdminKey removed

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -18,7 +18,9 @@ application:
           batchFilesPath: $BATCH_FILES_PATH
           maxFilesPerBatch: $MAX_FILES_PER_BATCH
           numBulkReq: $NUM_BULK_REQUEST
-          tempAdminKey: $TEMP_ADMIN_KEY
+          groupCheckUrl: $GROUP_CHECK_URL
+          fgUserGroups: $FG_USER_GROUPS
+          fgAdminGroups: $FG_ADMIN_GROUPS
         actions:
           copy:
             function: actions/copy/copy.js
