MWPW-134760 Copy/Promote on restricted site (eg: CC) (#52)
* MWPW-134760 Copy/Promote on restricted site (eg: CC)

Updating the instance path and status key to support drive.
E.g. if the a www is present in two different drives like CC and test
Enhance the instance path and status key configuration to accommodate
different drives, such as CC and test, when the common root path
(e.g. "www") is present in multiple locations.


Changes -
Extract the site absolute path from shareUrl(s).
Get the key based on action instead passing from action and is based on absolute path.
(One ENV filed is added SITE_ROOT_PATH_REX=.*/sites(/.*)< )
Instead of instance based on root folder base it on absolute folder.
Example -
Store Key (for copy) - /adobecom/Shared%20Documents/milo
Instance Path - milo-floodgate/batching/promoteAction/instance_adobecom_Shared_20Documents_milo_pink

Status Action (UI Code Adjustments Required for Milo):

Presently, the two fields, projectExcelPath and projectRoot (e.g., /milo, /milo-pink), are passed,
determining whether to execute a copy or promote action based on these values.
Modifications are needed due to the addition of a delete action.
The following parameters should be provided:
action: Options include promoteAction, copyAction, and deleteAction.
projectExcelPath: This parameter is optional.
rootFolder, fgRootFolder, shareUrl, fgShareUrl should be included,
similar to the parameters used in copy and promote actions.

* typo

* Fix for storeState is missing projectExcelPath for copy action
Updated to pull status from state using the action  type, shareUrls and optional projectExcelPath

For Copy
{
    "type": "copy",
    "projectExcelPath": "/drafts/floodgate/projects/test/sample.xlsx",
    "shareUrl": "...../Shared%20Documents/milo<relativePath>?web=1",
}

For Promote
{
    "type": "promote",
    "fgShareUrl": "....../Shared%20Documents/milo-pink<relativePath>?web=1"
}

* Removed few logger statements

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -22,6 +22,7 @@ application:
           fgUserGroups: $FG_USER_GROUPS
           fgAdminGroups: $FG_ADMIN_GROUPS
           fgDirPattern: $FG_DIR_PATTERN
+          siteRootPathRex: $SITE_ROOT_PATH_REX
         actions:
           copy:
             function: actions/copy/copy.js
