MWPW-134761 Authenticated Preview/Publish API calls for restricted sites (#54)
Moved the helix admin function out of utils to helixUtils. Updated preview/publish to pass the Authorization code, if the key is defined in config.

Below config to be added to .env
HELIX_ADMIN_API_KEYS={"cc": "<cc key>", "cc-pink": "<cc key>"}

Checked for below, With Preview Enabled (on CC / CC-Pink)
Non Protected Site (CC-Pink - No Key) - Preview passed
Protected Site (CC) with valid Key - Preview passed
Protected Site (CC) with Invalid/Missing Key - Preview failed and logged in xlsx

Preview/Publish is disabled back till the bulk API is fixed.

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -23,6 +23,7 @@ application:
           fgAdminGroups: $FG_ADMIN_GROUPS
           fgDirPattern: $FG_DIR_PATTERN
           siteRootPathRex: $SITE_ROOT_PATH_REX
+          helixAdminApiKeys: $HELIX_ADMIN_API_KEYS
         actions:
           copy:
             function: actions/copy/copy.js
