MWPW-133692 Promote status action for getting status, files and results (#58)
* MWPW-133692 - Promote results

Promote Action
1. Storing the start, end time, batchStatus as Completed, Completed with error and In Progress this along with status done. (in instance_info.json)
2. Added a file milo_pink/instance_results.json with merged results data.

Promote status action with below parameters
1. Promote Status - This lists all the batches in the promote along with overall status, start and end time
2. Promote results - This will list merged batch results (i.e failed promote, preview, publish)
3. Batch File  - This will list the batch-info files in the specific batch (no status per file is being sent)
4. Batch Results - This will list the specific batch results (i.e failed promote, preview, publish)

* Updated for start time for batch progress

* Added a null handling

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -85,6 +85,12 @@ application:
               LOG_LEVEL: debug
             limits:
               timeout: 600000
+          promote-status:
+            function: actions/promoteStatus/promoteStatus.js
+            web: 'yes'
+            runtime: nodejs:16
+            inputs:
+              LOG_LEVEL: debug
           status:
             function: actions/status/status.js
             web: 'yes'
