MWPW-135444 Integrate Franklin's bulk preview and publish API (#60)
* MWPW-135444 Integrate Franklin's bulk preview and publish API

Added a bulkPreviewPublish / bulkJobStatus that uses the franklin bulkPreview and

* MWPW-135444 Integrate Franklin's bulk preview and publish API

Update to use bulk publish api

* MWPW-135444 Integrate Franklin's bulk preview and publish API

For svg, pdf file the extension needs to be passed in preview/publish api.

* MWPW-135444 Integrate Franklin's bulk preview and publish API

Franklin API updates

* Helix API Updated from webPath to path

* Merged fgColor changes to bulkPreviewPublish

* Merged fgColor changes to bulkPreviewPublish

* MWPW-135444 Bulk Preview changes

Upated missed out await while clearing state.

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -24,6 +24,8 @@ application:
           fgDirPattern: $FG_DIR_PATTERN
           siteRootPathRex: $SITE_ROOT_PATH_REX
           helixAdminApiKeys: $HELIX_ADMIN_API_KEYS
+          bulkPreviewCheckInterval: $BULK_PREVIEW_CHECK_INTERVAL
+          maxBulkPreviewChecks: $MAX_BULK_PREVIEW_CHECKS
         actions:
           copy:
             function: actions/copy/copy.js
@@ -85,6 +87,7 @@ application:
               LOG_LEVEL: debug
             limits:
               timeout: 600000
+              concurrency: 1
           promote-status:
             function: actions/promoteStatus/promoteStatus.js
             web: 'yes'
