--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -33,6 +33,11 @@ jobs:
         with:
           os: ${{ matrix.os }}
           command: build
+      - name: Use Variables
+        run: |
+          echo "temp var : $TEMP_DATA"
+        env: 
+          TEMP_DATA: ${{ vars.TEMP_DATA }}
       - name: Deploy
         env:
           AIO_RUNTIME_NAMESPACE: ${{ secrets.AIO_RUNTIME_NAMESPACE_STAGE }}
