--- a/app.config.yaml
+++ b/app.config.yaml
@@ -33,6 +33,8 @@ application:
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+            limits:
+              concurrency: 1
           copy-worker:
             function: actions/copy/worker.js
             web: 'no'
@@ -42,24 +44,31 @@ application:
             limits:
               timeout: 3600000
               memorySize: 2048
+              concurrency: 1
           delete:
             function: actions/delete/delete.js
             web: 'yes'
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+            limits:
+              concurrency: 1
           delete-worker:
             function: actions/delete/worker.js
             web: 'no'
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+            limits:
+              concurrency: 1
           promote:
             function: actions/promote/promote.js
             web: 'yes'
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+            limits:
+              concurrency: 1
           promote-create-batch:
             function: actions/promote/createBatch.js
             web: 'no'
@@ -68,7 +77,8 @@ application:
               LOG_LEVEL: debug
             limits:
               timeout: 1900000
-              memory: 1024              
+              memory: 1024
+              concurrency: 1
           promote-worker:
             function: actions/promote/worker.js
             web: 'no'
@@ -78,7 +88,7 @@ application:
             limits:
               timeout: 3600000
               memorySize: 1024
-              concurrency: 5
+              concurrency: 1
           promote-trigger-n-track:
             function: actions/promote/triggerNTrack.js
             web: 'no'
@@ -94,18 +104,24 @@ application:
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+            limits:
+              concurrency: 1              
           status:
             function: actions/status/status.js
             web: 'yes'
             runtime: nodejs:16
             inputs:
               LOG_LEVEL: debug
+            limits:
+              concurrency: 1
           maint:
             function: actions/maint/maint.js
             web: 'yes'
             runtime: nodejs:16
             inputs:
-              LOG_LEVEL: debug              
+              LOG_LEVEL: debug
+            limits:
+              concurrency: 1
         triggers:
           everyMin:
             feed: /whisk.system/alarms/interval
