MWPW-138362 Trigger next promote batch after copy is complete  (#71)
* MWPW-138362 Batches to be executed based on copy and does not need to wait for preview

A state a field is added to indicate copy completion "details":{"promoteCopyStatus":"COMPLETED"}}}
Trigger and track checks for this field and if its COMPLETE would trigger the next batch while
the preview and promote is moved to postPromoteWorker.
The overall completion of batch still is tracked via batch status.
Example:
{"action":{"lastTriggeredBy":"","type":"promoteBatch_2","status":"IN PROGRESS","message":"Previewing/Publishing promoted content for 2","activationId":"","startTime":"2023-11-09T12:59:19.645Z","endTime":"","batchesInfo":[],"details":{"promoteCopyStatus":"COMPLETED"}}}

* Add inital state with in progress.

* minor fixes

* Message updates

* Updated to reflect the batch status e.g. Promoting batch 3 / 5.

* Status update

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/app.config.yaml
+++ b/app.config.yaml
@@ -79,6 +79,14 @@ application:
               timeout: 3600000
               memorySize: 1024
               concurrency: 5
+          post-copy-worker:
+            function: actions/promote/postCopyWorker.js
+            web: 'no'
+            runtime: nodejs:16
+            inputs:
+              LOG_LEVEL: debug
+            limits:
+              timeout: 3600000
           promote-trigger-n-track:
             function: actions/promote/triggerNTrack.js
             web: 'no'
