MWPW-139856 Enable bulk preview / publish for milo (#79)
* MWPW-139856 Enable bulk preview / publish for milo

Bulk preview is enabled for non-authenticated site.
Instead of HELIX_ADMIN_API_KEYS a config is added where sites that allows bulk preview or publish is added.
ENABLE_PREVEW_PUBLISH=["cc","cc-.*","milo","milo-.*"]

The values are regular expression based and is checked as ^<value>$


A settig [".*"] would enable preivew publish for all sites

Resolves: MWPW-139856

* Adding ENABLE_PREVEW_PUBLISH var in workflow

* minor update

---------

Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -37,6 +37,7 @@ jobs:
           SITE_ROOT_PATH_REX: ${{ vars.SITE_ROOT_PATH_REX }}
           BULK_PREVIEW_CHECK_INTERVAL: ${{ vars.BULK_PREVIEW_CHECK_INTERVAL }}
           MAX_BULK_PREVIEW_CHECKS: ${{ vars.MAX_BULK_PREVIEW_CHECKS }}
+          ENABLE_PREVEW_PUBLISH: ${{ vars.ENABLE_PREVEW_PUBLISH }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -85,6 +86,7 @@ jobs:
           SITE_ROOT_PATH_REX: ${{ vars.SITE_ROOT_PATH_REX }}
           BULK_PREVIEW_CHECK_INTERVAL: ${{ vars.BULK_PREVIEW_CHECK_INTERVAL }}
           MAX_BULK_PREVIEW_CHECKS: ${{ vars.MAX_BULK_PREVIEW_CHECKS }}
+          ENABLE_PREVEW_PUBLISH: ${{ vars.ENABLE_PREVEW_PUBLISH }}
         uses: adobe/aio-apps-action@2.0.2
         with:
           os: ${{ matrix.os }}
