MWPW-128690 Unit Tests (#93)
* Update README.md

* MWPW-142865: Stage deploy script updated (#91)

* .env template for easier setup and onboarding (#90)

* Update README.md

* .env template for easier setup and onboarding

* remove temp change

* MWPW-142865: Stage deploy script updated (#89)

* Revert temp readme change

* MWPW-128690 Unit Tests

Unit Test Coverage for action helpers and utilities.
Payload handling updated

* Minor fixes

* Sharepoint reference updated

* Rename FgAction

---------

Co-authored-by: Sunil Kamat <107644736+sukamat@users.noreply.github.com>
Co-authored-by: Raghu A <raghu@Raghus-MacBook-Pro.local>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@adobe/exc-app": "^0.2.17",
     "@azure/msal-node": "^1.17.2",
     "cloudevents": "^4.0.2",
+    "fetch-mock-jest": "^1.5.1",
     "node-fetch": "^2.6.0",
     "openwhisk": "^3.21.7",
     "regenerator-runtime": "^0.13.5",
