--- a/package.json
+++ b/package.json
@@ -3,39 +3,27 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@adobe/aio-lib-core-logging": "^2.0.0",
-    "@adobe/aio-lib-files": "^3.0.1",
-    "@adobe/aio-lib-state": "^2.1.2",
-    "@adobe/aio-sdk": "^3.0.0",
-    "@adobe/exc-app": "^0.2.17",
-    "@azure/msal-node": "^1.17.2",
-    "cloudevents": "^4.0.2",
+    "@adobe/aio-lib-core-logging": "^3.0.1",
+    "@adobe/aio-lib-files": "^4.0.1",
+    "@adobe/aio-lib-state": "^3.0.2",
+    "@adobe/aio-sdk": "^5",
+    "@azure/msal-node": "^2.6.5",
+    "@babel/eslint-parser": "^7.24.1",
     "fetch-mock-jest": "^1.5.1",
     "node-fetch": "^2.6.0",
-    "openwhisk": "^3.21.7",
-    "regenerator-runtime": "^0.13.5",
-    "uuid": "^8.0.0"
+    "openwhisk": "^3.21.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/eslint-parser": "^7.21.3",
     "@openwhisk/wskdebug": "^1.3.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-jsdoc": "^39.3.3",
-    "eslint-plugin-n": "^15.2.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "jest": "^27.2.4"
+    "jest": "^29"
   },
   "scripts": {
     "test": "jest --passWithNoTests ./test",
     "e2e": "jest --collectCoverage=false --testRegex ./e2e"
   },
   "engines": {
-    "node": "^14.18 || ^16.13 || >=18"
+    "node": ">=18"
   }
 }
